fix(thumbnails): stabilize centering and edge visibility math

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -376,7 +376,7 @@
 	ul.thumbnails-list
 	li
 	+ li {
-	margin-left: 10;
+	margin-left: 8px;
 }
 
 .gallery-figcaption
